Fix Information Section Alignment

--- a/pages/style.css
+++ b/pages/style.css
@@ -96,6 +96,7 @@ body {
 }
 
 .Information {
+    justify-content: center;
     Padding: 70px;
 }
 
